# myWebServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini
.github/workflows/: c-cpp.yml
src/: main.cpp
src/buffer/: buffer.cpp  buffer.h
src/config/: configMgr.cpp  configMgr.h  xini_file.h
src/http/: httpconn.cpp  httpconn.h  httprequest.cpp  httprequest.h  httpresponse.cpp  httpresponse.h
src/log/: blockqueue.h  log.cpp  log.h
src/pool/: sqlconnRAII.h  sqlconnpool.cpp  sqlconnpool.h  threadpool.h
src/resources/css/: ._style.css
src/server/: epoller.cpp  epoller.h  webserver.cpp  webserver.h
src/timer/: heaptimer.cpp  heaptimer.h
test/: config_test.cpp  log_test.cpp  sqlconn_pool_test.cpp  thread_pool_test.cpp
